--- a/objective_c/meow/meow/Base.lproj/Main.storyboard
+++ b/objective_c/meow/meow/Base.lproj/Main.storyboard
@@ -1,24 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="ccX-4A-S6n">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meow!!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84p-5C-Mcc">
+                                <rect key="frame" x="0.0" y="59" width="393" height="307"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="60"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <size key="shadowOffset" width="4" height="6"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSi-p7-S3W">
+                                <rect key="frame" x="0.0" y="374" width="393" height="444"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="gSi-p7-S3W" secondAttribute="height" multiplier="177:200" id="uhZ-vT-SB4"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="cat"/>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7zp-yw-gWy"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gSi-p7-S3W" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0Mc-RK-1og"/>
+                            <constraint firstAttribute="bottom" secondItem="ccX-4A-S6n" secondAttribute="bottom" id="2u7-SI-GQ3"/>
+                            <constraint firstItem="gSi-p7-S3W" firstAttribute="top" secondItem="84p-5C-Mcc" secondAttribute="bottom" constant="8" symbolic="YES" id="JZf-Qt-8Ma"/>
+                            <constraint firstItem="gSi-p7-S3W" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="PEY-YC-eRl"/>
+                            <constraint firstItem="ccX-4A-S6n" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="VaP-4p-zUM"/>
+                            <constraint firstItem="ccX-4A-S6n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Wpj-LR-ozP"/>
+                            <constraint firstItem="gSi-p7-S3W" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="deN-ud-USy"/>
+                            <constraint firstItem="84p-5C-Mcc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eqj-zf-3rN"/>
+                            <constraint firstItem="ccX-4A-S6n" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="i49-Ic-fsa"/>
+                            <constraint firstItem="84p-5C-Mcc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="n08-oc-qsZ"/>
+                            <constraint firstItem="84p-5C-Mcc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="tCd-VE-cH0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="labelView" destination="84p-5C-Mcc" id="8b0-KF-hup"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="135.1145038167939" y="4.9295774647887329"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Background" width="1200" height="1200"/>
+        <image name="cat" width="900" height="978"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
